<resources>
    <string name="app_name">Capstone Product Fix</string>
    <string name="contentdescription">image</string>
    <string name="sign_in">Sign In</string>
    <string name="Passwordediteks">Password</string>
    <string name="enter_password">Masukan kata sandi</string>
    <string name="belum_mempunyai_akun_daftar_disini">Belum mempunyai akun? <u><font color="#10069F">Daftar disini!</font></u></string>
    <string name="or">OR</string>
    <string name="berikutnya">Berikutnya</string>
    <string name="lupapassword">Lupa Password ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="kembali">Kembali</string>
    <string name="reset_password">Reset Password</string>
    <string name="newPasswordediteks">New Password</string>
    <string name="WelcomeMessage">Selamat Datang Di\nTujuan Temukan Jurusan Mu!</string>
    <string name="bingun_pilih">Bingung Pilih Jurusan? \n<b><font color="#DA7E55">TUJUAN</font></b> Solusinya</string>
    <string name="apa_itu_tujuan">Apa itu TUJUAN?</string>
    <string name="description">"Tujuan" adalah aplikasi mobile untuk siswa SMA yang membantu mereka menemukan jurusan sesuai minat dan bakat dengan kuis, informasi jurusan, dan sesi konseling. Dengan antarmuka yang ramah pengguna, aplikasi ini membimbing siswa membuat keputusan pendidikan yang terarah.</string>
    <string name="mulai">Mulai</string>
    <string name="Home">Home</string>
    <string name="History">History</string>
    <string name="Profile">Profile</string>
    <string name="example_output">Test Jurusan</string>
    <string name="example_output2">Anda cocok dengan jurusan</string>
    <string name="finalresult">Teknik Mesin</string>
    <string name="time_exp">Tested on</string>
    <string name="history_page">Lihat Riwayat Test Kamu!</string>
    <string name="example_question">Apakah kamu suka bermain bola?</string>
    <string name="account">Account</string>
    <string name="exmp_email">rivalganteng@gmail.com</string>
    <string name="exmp_username">\@rivalganteng</string>
    <string name="setting">Setting</string>
    <string name="exmp_gantipw">Ganti Password?</string>
    <string name="logout">Logout</string>
    <string name="example_mainoutput">Hasil test anda :)</string>
    <string name="PasswordKurangPanjang">Kata sandi kurang panjang!</string>
    <string name="PasswordTerlaluPanjang">Kata sandi terlalu panjang!</string>
    <string name="a_za_z0_9_a_za_z0_9_a_za_z_2_4">^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,4}$</string>
    <string name="EmailInvalid">E-mail tidak valid!</string>
    <string name="UsernameInvalid">Username tidak valid!</string>
    <string name="e_mail_kosong">Form e-mail masih kosong!</string>
    <string name="login_succes">Masuk berhasil</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="logingagal">GAGAL MASUK!</string>
    <string name="daftarakunberhasil">DAFTAR AKUN BERHASIL!</string>
    <string name="daftarakungagal">DAFTAR AKUN GAGAL!</string>
    <string name="ingin_logout">Apakah anda ingin keluar?</string>
    <string name="YA">Ya!</string>
    <string name="gagal_load">Gagal Memuat Data</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="yakin_question">Apakah jawaban sudah terisi dengan benar?</string>
    <string name="yakin_question2">Jawaban tidak dapat diubah! harap cek kembali jawaban anda</string>
    <string name="question_back">Kembali ke halaman utama, jawaban akan di atur ulang</string>
    <string name="tetap">Lanjutkan</string>
    <string name="radiobutton_empty">Jawaban tidak boleh kosong!</string>
    <string name="selesai">Balik ke halaman utama untuk melihat hasil anda!</string>
    <string name="Selesai">Selesai</string>
    <string name="tahapakhir">Anda sudah mencapai tahap akhir</string>
    <string name="satu">1</string>
    <string name="timeangka">12/05/2023</string>
    <string name="Tujuan">Tujuan</string>
</resources>