<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_output"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B5ECFF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/CL_Item"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:background="@drawable/full_white_melengkung"
            android:padding="3dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/main_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:fontFamily="@font/mochiepopone"
                android:text="@string/example_question"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/CL_Item"
            app:layout_constraintEnd_toEndOf="@+id/CL_Item"
            app:layout_constraintStart_toStartOf="@+id/CL_Item">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mochiepopone"
                android:text="@string/_1"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="@+id/radioButton1"
                app:layout_constraintStart_toStartOf="@+id/radioButton1"
                app:layout_constraintTop_toBottomOf="@+id/radioButton1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/radioButton1"
                app:layout_constraintStart_toEndOf="@+id/radioButton1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mochiepopone"
                android:text="@string/_2"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="@+id/radioButton2"
                app:layout_constraintStart_toStartOf="@+id/radioButton2"
                app:layout_constraintTop_toBottomOf="@+id/radioButton2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/radioButton2"
                app:layout_constraintStart_toEndOf="@+id/radioButton2" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mochiepopone"
                android:text="@string/_3"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="@+id/radioButton3"
                app:layout_constraintStart_toStartOf="@+id/radioButton3"
                app:layout_constraintTop_toBottomOf="@+id/radioButton3" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/radioButton3"
                app:layout_constraintStart_toEndOf="@+id/radioButton3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mochiepopone"
                android:text="@string/_4"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="@+id/radioButton4"
                app:layout_constraintStart_toStartOf="@+id/radioButton4"
                app:layout_constraintTop_toBottomOf="@+id/radioButton4" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/radioButton4"
                app:layout_constraintStart_toEndOf="@+id/radioButton4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mochiepopone"
                android:text="@string/_5"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="@+id/radioButton5"
                app:layout_constraintStart_toStartOf="@+id/radioButton5"
                app:layout_constraintTop_toBottomOf="@+id/radioButton5" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>