<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_output"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="200dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_test1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/CL_Item"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:background="@drawable/full_white_melengkung"
            android:padding="3dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/imageViewAddStory"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:src="@drawable/output_img"
                android:cropToPadding="false"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/TV_line2" />

            <TextView
                android:id="@+id/main_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mochiepopone"
                android:text="@string/example_output"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="4dp"
                app:layout_constraintStart_toEndOf="@+id/imageViewAddStory"
                app:layout_constraintTop_toTopOf="@+id/imageViewAddStory" />

            <TextView
                android:id="@+id/tvId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mochiepopone"
                android:layout_marginStart="5dp"
                android:text="@string/satu"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="4dp"
                app:layout_constraintStart_toEndOf="@+id/main_Title"
                app:layout_constraintTop_toTopOf="@+id/main_Title"
                app:layout_constraintBottom_toBottomOf="@+id/main_Title" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montaga"
                android:text="@string/example_output2"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/main_Title"
                app:layout_constraintStart_toStartOf="@+id/main_Title" />

            <TextView
                android:id="@+id/tv_finalresult"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oleo_script_bold"
                android:text="@string/finalresult"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/tv_result"
                app:layout_constraintTop_toBottomOf="@+id/tv_result" />

            <TextView
                android:id="@+id/TV_line2"
                android:layout_width="220dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/line_draw"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/imageViewAddStory"
                app:layout_constraintTop_toBottomOf="@+id/tv_finalresult" />

            <TextView
                android:id="@+id/tv_tested_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montaga"
                android:text="@string/time_exp"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@+id/TV_line2"
                app:layout_constraintTop_toBottomOf="@+id/TV_line2" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montaga"
                android:layout_marginStart="5dp"
                android:text="@string/timeangka"
                android:textSize="11sp"
                app:layout_constraintStart_toEndOf="@+id/tv_tested_time"
                app:layout_constraintTop_toTopOf="@+id/tv_tested_time"
                app:layout_constraintBottom_toBottomOf="@+id/tv_tested_time" />

            <ImageView
                android:id="@+id/imageRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/right_icon"
                android:layout_marginTop="10dp"
                android:cropToPadding="false"
                android:foregroundGravity="center"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@+id/TV_line2"
                app:layout_constraintTop_toTopOf="@+id/tv_tested_time"
                app:layout_constraintBottom_toBottomOf="@+id/tv_tested_time" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/iconAnimasiRv"
            android:layout_width="90dp"
            android:layout_height="180dp"
            android:src="@drawable/cewe_sma"
            android:cropToPadding="false"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="@+id/CL_Item"
            app:layout_constraintTop_toTopOf="@+id/CL_Item"
            app:layout_constraintBottom_toBottomOf="@+id/CL_Item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>