<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.authpage.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL_BG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_test1"
        app:layout_constraintBottom_toTopOf="@+id/CL_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL_Top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/IM_icontoplogin"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@drawable/polygon_shape"
            android:contentDescription="@string/contentdescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/IM_logotoplogin"
            android:layout_width="220dp"
            android:layout_height="200dp"
            android:background="@drawable/logo_tujuan"
            android:contentDescription="@string/contentdescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/IM_icontoplogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL_Form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutDescription="@xml/activity_login_xml_cl_form_scene"
        app:layout_constraintBottom_toTopOf="@+id/CL_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CL_Top"
        app:layout_constraintVertical_bias="0.004">

        <TextView
            android:id="@+id/TV_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/marko_one"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.079" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_emailusername"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints="emailAddress"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusTopEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            app:helperText=" "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV_Title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_formemailusername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/marcellus"
                android:hint="@string/email"
                android:inputType="textEmailSubject" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_password"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusTopEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            app:counterEnabled="true"
            app:counterTextColor="@color/biru_tua"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle"
            app:helperText="@string/enter_password"
            app:helperTextTextColor="@color/biru_tua"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/form_emailusername"
            app:layout_constraintStart_toStartOf="@+id/form_emailusername"
            app:layout_constraintTop_toBottomOf="@+id/form_emailusername">

            <com.dicoding.capstoneproductfix.ui.customview.PasswordCustomView
                android:id="@+id/editText_formpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/marcellus"
                android:hint="@string/Passwordediteks"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/TV_line1"
            android:layout_width="325dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/line_draw"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/form_password"
            app:layout_constraintStart_toStartOf="@+id/form_password"
            app:layout_constraintTop_toBottomOf="@+id/form_password" />

        <TextView
            android:id="@+id/TV_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/marko_one"
            android:lineSpacingExtra="12sp"
            android:text="@string/belum_mempunyai_akun_daftar_disini"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/form_password"
            app:layout_constraintStart_toStartOf="@+id/form_password"
            app:layout_constraintTop_toBottomOf="@+id/TV_line1" />

        <TextView
            android:id="@+id/TV_line2"
            android:layout_width="325dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/line_draw"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/form_password"
            app:layout_constraintStart_toStartOf="@+id/form_password"
            app:layout_constraintTop_toBottomOf="@+id/TV_signup" />

        <ImageView
            android:id="@+id/IM_logotopcewe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="95dp"
            android:background="@drawable/cewe_duduk"
            android:contentDescription="@string/contentdescription"
            app:layout_constraintBottom_toBottomOf="@+id/form_emailusername"
            app:layout_constraintEnd_toEndOf="@+id/form_emailusername"
            app:layout_constraintStart_toEndOf="@+id/form_emailusername"
            app:layout_constraintTop_toTopOf="@+id/form_emailusername" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL_Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/CL_Buttoninside"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/IM_bgbutton"
            android:layout_width="175dp"
            android:layout_height="55dp"
            android:layout_margin="20dp"
            android:background="@drawable/border_button"
            android:contentDescription="@string/contentdescription"
            app:layout_constraintStart_toStartOf="@+id/buttonloginkanan"
            app:layout_constraintEnd_toEndOf="@+id/buttonloginkanan"
            app:layout_constraintTop_toTopOf="@+id/buttonloginkanan"
            app:layout_constraintBottom_toBottomOf="@+id/buttonloginkanan" />

        <Button
            android:id="@+id/buttonloginkanan"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/berikutnya"
            android:textSize="14sp"
            android:layout_margin="10dp"
            app:iconTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/buttonloginkanan"
            app:layout_constraintStart_toStartOf="@+id/buttonloginkanan"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>